[package]
name = "census"
version = "0.3.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
categories = []
description = """Keeps an inventory of living objects"""
homepage = "https://github.com/tantivy-search/census"
repository = "https://github.com/tantivy-search/census"
readme = "README.md"
keywords = ["inventory"]
